data/all_generated_tests/raw_wast_tests/loop_IncorrectBranchTargetResolution_227.wast
;; 8. **Test for Correct Operand Stack Unwinding on Branches**:    Feature a loop with stack operations and a `br` that should unwind the stack precisely to the loop's entry point while preserving operand integrity, ensuring branching correctly manages the operand stack. This validates stack unwinding during branching.

(assert_invalid
  (module 
    (func (result i32)
      (i32.const 1) 
      (i32.const 2) 
      (loop (result i32)
        (i32.const 3)
        (br 0)
        (drop)
      )
    )
  )
  "type mismatch"
)